--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hi 
+<html>
+<title> Push test 3 </title>
+<link rel="manifest" href="/manifest.json" />
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  var OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "e545e82e-bbae-4b4c-b24c-bf7a0c3b2412",
+    });
+  });
+</script>
+  
+<H1>Hi</h1>
+  
+</html>
